Bug 407804 - Clicking on the layer thumbnail in layers docker does not effect by choosing/selecting layer
Summary: Clicking on the layer thumbnail in layers docker does not effect by choosin...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: 4.2.0-alpha
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-21 16:41 UTC by grzegorzpedrycz
Modified: 2019-09-05 08:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description grzegorzpedrycz 2019-05-21 16:41:23 UTC
SUMMARY

Clicking on the layer thumbnail ( in layers docker)  does not effect by choosing/selecting layer. We need to click in any other place ( name , visable icon etc ) Probably that it has something common with new feature of  clicking Opaque by clicking Ctrl + click on layer thumbnail 


STEPS TO REPRODUCE
1. LMB clik on the layer thumbnail ( exactly  in thumbnail not other space in that layer tab )  in layer docker 
2. 
3. 

OBSERVED RESULT
the layer is not selected

EXPECTED RESULT

the layer is  selected


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 vanyossi 2019-05-23 06:17:55 UTC
I can confirm this, and is probably like this intentionally. that is: Left lick on Thumbnail do nothing.

The manual does not say anything on this. Probably normal click on thumnail should at least change active layer in docker to clicked layer.
Comment 2 Halla Rempt 2019-05-23 08:43:07 UTC
Yes, clicking on the thumbnail should select the layer (but not do anything else)
Comment 3 vanyossi 2019-05-24 04:59:27 UTC
Git commit e775a0e82501633b5769e17263fa7ad5d036a29e by Ivan Yossi.
Committed on 24/05/2019 at 02:52.
Pushed by ivany into branch 'master'.

Click layer thumbnail with no modifier set layer selected
BACKPORT:krita/4.2

M  +1    -0    plugins/dockers/layerdocker/NodeDelegate.cpp

https://invent.kde.org/kde/krita/commit/e775a0e82501633b5769e17263fa7ad5d036a29e
Comment 4 Halla Rempt 2019-05-24 10:19:01 UTC
Git commit 238ca2b94c527159c59a871fd1d7ca62312c5297 by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 24/05/2019 at 10:17.
Pushed by rempt into branch 'krita/4.2'.

Click layer thumbnail with no modifier set layer selected
BACKPORT:krita/4.2

(cherry picked from commit e775a0e82501633b5769e17263fa7ad5d036a29e)

M  +1    -0    plugins/dockers/layerdocker/NodeDelegate.cpp

https://invent.kde.org/kde/krita/commit/238ca2b94c527159c59a871fd1d7ca62312c5297