Click layer thumbnail with no modifier set layer selected

BUG:407804
BACKPORT:krita/4.2